redux-curso-completo

--- a/redux-desde-cero/03-async-logic-and-thunks/index.html
+++ b/redux-desde-cero/03-async-logic-and-thunks/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#707070" />
-    <meta name="description" content="Async Logic And Thunks" />
+    <meta name="description" content="Blog Project" />
     <link rel="icon" href="src/assets/icons/favicon.png" />
     <link rel="apple-touch-icon" href="src/assets/icons/favicon.png" />
-    <title>Async Logic And Thunks</title>
+    <title>Blog Project</title>
   </head>
   <body>
     <div id="root"></div>
