--- a/react-rtk-crud/index.html
+++ b/react-rtk-crud/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#18181b" />
-    <meta name="description" content="React RTK Crud" />
+    <meta name="description" content="Tasks Pending" />
     <link rel="icon" href="src/assets/icons/favicon.png" />
     <link rel="apple-touch-icon" href="src/assets/icons/favicon.png" />
-    <title>React RTK Crud</title>
+    <title>Tasks Pending</title>
   </head>
   <body>
     <div id="root"></div>
